--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "immer": "^10.0.2",
     "json-case-convertor": "^1.4.0",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-router-dom": "^6.14.1",
+    "v8n": "^1.5.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
