--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.1",
+    "use-file-picker": "^1.7.0",
     "v8n": "^1.5.1",
     "zustand": "^4.3.9"
   },
